[tool.poetry]
name = "hass-omie"
version = "1.0.11-beta.1"
description = "OMIE Home Assistant integration"
authors = ["Luis Miranda <sleepy.gate8799@fastmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

packages = [
    { include = "omie", from = "custom_components" },
]

[tool.poetry.dependencies]
python = "~3.12"
homeassistant = ">=2023.2.0"
aiohttp = "^3.8.1"
pytz = "^2022.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
