[tool.poetry]
name = "hass-omie"
version = "2.0.0-beta.3"
description = "OMIE Home Assistant integration"
authors = ["Luis Miranda <sleepy.gate8799@fastmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

packages = [
    { include = "omie", from = "custom_components" },
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
homeassistant = ">=2025.1.0"
pytz = "^2025.2"
pyomie = "~1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
